[package]
name = "ssh-forward-to-docker-socket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.80"
serde = "1"
serde_json = "1"
futures-util = "0.3.30"

log = "0.4.22"
env_logger = "0.11.3"

axum = "0.7.5"
tokio = { version = "1", features = ["full"] }

russh = "0.43.0"
russh-keys = "0.43.0"

bollard = "*"


